2005-09-01  Yves Combe  <yves@ycombe.net>

	add new mode in memory.c: Play against the computer.
	That makes a new board: /boards/memory_tux

	* boards/Makefile.am:
	* boards/boardicons/memory_tux.png:
	* boards/memory_tux.xml.in:
	* src/boards/memory.c: (get_random_token), (pause_board),
	(start_board), (end_board), (memory_next_level),
	(memory_destroy_all_items), (get_image), (create_item),
	(player_win), (display_card), (hide_card), (item_event),
	(add_card_in_tux_memory), (compare_card),
	(find_card_in_tux_memory), (remove_card_from_tux_memory),
	(tux_play):

2005-09-01  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed to work with the new section management

	* docs/gcompris2spip.pl:
	* docs/spip_menuboard.xsl:

2005-08-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/dataset/tuxpaint_pictures.xml: updated to use our tuxpaint icon
	* boards/dataset/mrpatate.xml: removed, replaced by mrpotato.xml

2005-08-30  Yves Combe  <yves@ycombe.net>

	change colors letters in memory.
	clean code and add trace in reading (strange crash).

	* src/boards/memory.c: (create_item):
	* src/boards/reading.c: (reading_next_level),
	(reading_destroy_all_items), (reading_create_item):

2005-08-30  Yves Combe  <yves@ycombe.net>

	huftis has remade railroad background from frack svg, because the jpg had awful artifacts.

	* boards/railroad/railroad-bg.png:
	* src/boards/railroad.c: (start_board):
	* src/svg_images/railroad-bg.svg:

2005-08-30  Yves Combe  <yves@ycombe.net>

	use pango metrics to determine interline in reading, and pango text markup to make black square in last word.
	change font in memory, to avoid confusion between uppercased i and lowercased L. Set to "Serif bold 28" in source, should be passed through skin.

	* src/boards/memory.c: (create_item):
	* src/boards/reading.c: (start_board), (reading_next_level),
	(reading_create_item):

2005-08-30  Bruno coudoin  <bruno.coudoin@free.fr>

        - added continent voices for french by Julien Gilles